<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.pa.eric.lightsapp.PlaySong">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/song_name"
            android:id="@+id/songNameTextView"
            android:paddingLeft="5dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bpm"
                android:id="@+id/bpmTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mood"
                android:id="@+id/moodTextView"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cue_list"
            android:id="@+id/cueListTextView"
            android:layout_weight="0.99"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:scrollbars="horizontal" />

    </LinearLayout>

    <StackView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/stackView"
        android:layout_gravity="bottom" />

</LinearLayout>
